force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>PacPoint-CL051618 - Created for phase1</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Transaction Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>