force-app/main/default/objects/Transaction__c/fields/AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress__c</fullName>
    <description>PacPoint - IC0100218 - Created for PQB Phase 1</description>
    <formula>Account__r.BillingStreet &amp;&apos;, &apos;&amp;  BR() &amp;  Account__r.BillingCity &amp;&apos;,&apos;&amp;  Account__r.BillingState &amp; &apos; &apos; &amp; Account__r.BillingPostalCode &amp; &apos; &apos; &amp; BR() &amp;Account__r.BillingCountry</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>