force-app/main/default/objects/Transaction__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>PacPoint-FT070518 - Created for phase 1</description>
    <label>Account Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>