force-app/main/default/objects/Transaction__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <label>Batch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>