force-app/main/default/objects/Transaction__c/fields/BatchNumberDigits__c.field-meta.xml
<CustomField>
    <fullName>BatchNumberDigits__c</fullName>
    <description>PacPoint-IC120718- Created for Phase 1</description>
    <label>BatchNumberDigits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>