force-app/main/default/objects/Transaction__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>