force-app/main/default/objects/Transaction__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>BLANKVALUE(Account__r.BillingCountry,&apos;United States&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>