force-app/main/default/objects/Transaction__c/fields/BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingFirstName__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing First Name</label>
    <type>Text</type>
</CustomField>