force-app/main/default/objects/Transaction__c/fields/BillingLastName__c.field-meta.xml
<CustomField>
    <fullName>BillingLastName__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Last Name</label>
    <type>Text</type>
</CustomField>