force-app/main/default/objects/Transaction__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postal Code</label>
    <type>Text</type>
</CustomField>