force-app/main/default/objects/Transaction__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>PacPoint-CL103118 - Created for phase 1</description>
    <formula>Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>