force-app/main/default/objects/Transaction__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>