force-app/main/default/objects/Transaction__c/fields/breg_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Created_Date__c</fullName>
    <description>Aalta BREG-4018</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>