force-app/main/default/objects/Transaction__c/fields/breg_Document_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Document_Date__c</fullName>
    <description>Aalta BREG-4059</description>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>