force-app/main/default/objects/Transaction__c/fields/breg_EBOSS_CERTIFICATE__c.field-meta.xml
<CustomField>
    <fullName>breg_EBOSS_CERTIFICATE__c</fullName>
    <description>Aalta BREG-4018</description>
    <label>EBOSS CERTIFICATE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>