force-app/main/default/objects/Transaction__c/fields/breg_EBOSS_CERTIFIED__c.field-meta.xml
<CustomField>
    <fullName>breg_EBOSS_CERTIFIED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-4018</description>
    <label>EBOSS CERTIFIED</label>
    <type>Checkbox</type>
</CustomField>