force-app/main/default/objects/Transaction__c/fields/breg_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-4059</description>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Entity)</relationshipLabel>
    <relationshipName>breg_PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>