force-app/main/default/objects/Transaction__c/fields/breg_External_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_External_Transaction_ID__c</fullName>
    <description>Aalta BREG-4059</description>
    <externalId>true</externalId>
    <label>External Transaction ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>