force-app/main/default/objects/Transaction__c/fields/CertificateRequest__c.field-meta.xml
<CustomField>
    <fullName>CertificateRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN11042020-Created for case 11288</description>
    <label>Certificate Request</label>
    <referenceTo>CertificateRequest__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>