force-app/main/default/objects/Transaction__c/fields/Created_By_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Type__c</fullName>
    <formula>text($Profile.UserType)</formula>
    <label>Created By User Type</label>
    <type>Text</type>
</CustomField>