force-app/main/default/objects/Transaction__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>TIMEVALUE(CreatedDate - 0.416666666667)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>