force-app/main/default/objects/Transaction__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>