force-app/main/default/objects/Transaction__c/fields/DFIRegistration__c.field-meta.xml
<CustomField>
    <fullName>DFIRegistration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV021120 - Created for DFI phase 1</description>
    <label>DFI Registration</label>
    <referenceTo>DFIRegistration__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>