force-app/main/default/objects/Transaction__c/fields/HPEAPRequest__c.field-meta.xml
<CustomField>
    <fullName>HPEAPRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connect HPEAP Request</description>
    <label>HPEAP Request</label>
    <referenceTo>HPEAPRequest__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>