force-app/main/default/objects/Transaction__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071519- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>