force-app/main/default/objects/Transaction__c/fields/LicenseNumbers__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumbers__c</fullName>
    <label>License Numbers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>