force-app/main/default/objects/Transaction__c/fields/Mobile_Pay__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Pay__c</fullName>
    <label>Mobile Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
            <value>
                <fullName>Samsung Pay</fullName>
            </value>
            <value>
                <fullName>Android Pay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>