force-app/main/default/objects/Transaction__c/fields/Most_Recent_Bounced_Check__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Bounced_Check__c</fullName>
    <description>Used to reflect Most Recent bounced Check from account</description>
    <formula>Account__r.MostRecentBouncedCheck__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Bounced Check</label>
    <type>Date</type>
</CustomField>