force-app/main/default/objects/Transaction__c/fields/MostRecentDisputedCharge__c.field-meta.xml
<CustomField>
    <fullName>MostRecentDisputedCharge__c</fullName>
    <formula>Account__r.MostRecentDisputedCharge__c</formula>
    <label>Most Recent Disputed Charge</label>
    <type>Date</type>
</CustomField>