force-app/main/default/objects/Transaction__c/fields/OverPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>OverPaymentAmount__c</fullName>
    <formula>MAX(PaymentAmount__c -  TotalAmount__c +  TotalRefundAmount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount that was over-paid on this Transaction.  This is the amount that was originally paid minus the amount that was owned.</inlineHelpText>
    <label>Over-Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>