force-app/main/default/objects/Transaction__c/fields/PaidbyGroupPayment__c.field-meta.xml
<CustomField>
    <fullName>PaidbyGroupPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid by Group Payment</label>
    <type>Checkbox</type>
</CustomField>