force-app/main/default/objects/Transaction__c/fields/ParentTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ParentTotalAmount__c</fullName>
    <description>PacPoint-MC082718 - Created for phase 1

Total amount for Transactions Parent (sum of all transaction related to the parent)</description>
    <label>Parent Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>