force-app/main/default/objects/Transaction__c/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <description>PacPoint-CL092818 - Created for phase 1</description>
    <inlineHelpText>The total amount that has already been paid on this Transaction.  This is the Sum of all Payments made minus the Sum of all Refunds on this Transaction.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>