force-app/main/default/objects/Transaction__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <description>PacPoint - RA010719 - BREG Phase 1</description>
    <inlineHelpText>Add payment due date here for payments that are part of a payment plan.</inlineHelpText>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>