force-app/main/default/objects/Transaction__c/fields/PersonAccountContact__c.field-meta.xml
<CustomField>
    <fullName>PersonAccountContact__c</fullName>
    <description>PacPoint-FT070218 - Created for phase 1</description>
    <formula>Account__r.PersonContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Contact</label>
    <type>Text</type>
</CustomField>