force-app/main/default/objects/Transaction__c/fields/PerUnitFeeType__c.field-meta.xml
<CustomField>
    <fullName>PerUnitFeeType__c</fullName>
    <label>Per Unit Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MVD</fullName>
            </value>
            <value>
                <fullName>Number of Properties</fullName>
            </value>
            <value>
                <fullName>Number of Units</fullName>
            </value>
            <value>
                <fullName>Franchise Agreements</fullName>
            </value>
            <value>
                <fullName>MVD Renewal</fullName>
            </value>
            <value>
                <fullName>MVB Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>