force-app/main/default/objects/Transaction__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>