force-app/main/default/objects/Transaction__c/fields/Sanction_Payment__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanction Payment</label>
    <referenceTo>Sanction_Payment__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>