force-app/main/default/objects/Transaction__c/fields/SEB_Case__c.field-meta.xml
<CustomField>
    <fullName>SEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB10/26/2018 - Created for phase 1</description>
    <label>SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>