force-app/main/default/objects/Transaction__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii Business Express</fullName>
            </value>
            <value>
                <fullName>DCCA PVL Renewals</fullName>
            </value>
            <value>
                <fullName>DCCA COGS and Other Documents</fullName>
            </value>
            <value>
                <fullName>HILS Renewals</fullName>
            </value>
            <value>
                <fullName>DCCA BREG Annual Filings</fullName>
            </value>
            <value>
                <fullName>PVL List Builder</fullName>
            </value>
            <value>
                <fullName>Entity List Builder</fullName>
            </value>
            <value>
                <fullName>PVL Initial License</fullName>
            </value>
            <value>
                <fullName>Mortgage Foreclosure Payments</fullName>
            </value>
            <value>
                <fullName>Heald College Transcript Request Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>