force-app/main/default/objects/Transaction__c/fields/TempMemo__c.field-meta.xml
<CustomField>
    <fullName>TempMemo__c</fullName>
    <description>Used to store the Temp Memo value in the Transaction used for payment.</description>
    <label>Temp Memo</label>
    <type>TextArea</type>
</CustomField>