force-app/main/default/objects/Transaction__c/fields/TempPaymentType__c.field-meta.xml
<CustomField>
    <fullName>TempPaymentType__c</fullName>
    <description>Used to capture the temp payment type.</description>
    <label>Temp Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>