force-app/main/default/objects/Transaction__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <inlineHelpText>The Total Amount of the Transaction.  This is the Sum of all the Amounts on the Transaction Lines.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>