force-app/main/default/objects/Transaction__c/fields/TotalExternalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalExternalAmount__c</fullName>
    <description>PacPoint-MV053018 - Created for phase1</description>
    <label>Total External Amount</label>
    <summarizedField>TransactionLine__c.ExternalAmount__c</summarizedField>
    <summaryForeignKey>TransactionLine__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>