force-app/main/default/objects/Transaction__c/fields/TotalRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRefundAmount__c</fullName>
    <description>PacPoint-FT082818 - Created for phase 1</description>
    <inlineHelpText>The total amount that has already been refunded on this Transaction.  This is a summary of all Transaction Lines that have a status of &quot;Refunded&quot;</inlineHelpText>
    <label>Total Refund Amount</label>
    <summarizedField>TransactionLine__c.RefundAmount__c</summarizedField>
    <summaryFilterItems>
        <field>TransactionLine__c.PaidStatus__c</field>
        <operation>equals</operation>
        <value>Refunded</value>
    </summaryFilterItems>
    <summaryForeignKey>TransactionLine__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>