force-app/main/default/objects/Transaction__c/fields/TransactionGroup__c.field-meta.xml
<CustomField>
    <fullName>TransactionGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT082618 - Created for phase 1</description>
    <label>Transaction Group</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Grouped Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>