force-app/main/default/objects/Transaction__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1  

Used for External Systems sending transactions and linking payments coming from gateway.</description>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>