force-app/main/default/objects/Transaction__c/fields/TransactionLinesCount__c.field-meta.xml
<CustomField>
    <fullName>TransactionLinesCount__c</fullName>
    <description>PacPoint-CL040119 - Created for phase 1</description>
    <label>Transaction Lines Count</label>
    <summaryForeignKey>TransactionLine__c.Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>