force-app/main/default/objects/Transaction__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>PacPoint-CL051618 - Created for phase 1</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
                <isActive>false</isActive>
                <label>Authorization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>