force-app/main/default/objects/Transaction__c/fields/WorkitemID__c.field-meta.xml
<CustomField>
    <fullName>WorkitemID__c</fullName>
    <label>Workitem ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>