force-app/main/default/objects/Transaction__c/validationRules/TotalAmountAccountIsChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalAmountAccountIsChanged</fullName>
    <active>false</active>
    <description>PacPoint-IC070419- Created for Phase 2
If the Status is Completed, do not allow these fields to be changed:
Total Amount
Account</description>
    <errorConditionFormula>AND(

OR(
ISCHANGED( TotalAmount__c ), ISCHANGED( Account__c )
), 

ISPICKVAL( Status__c , &apos;Completed&apos;) 

)</errorConditionFormula>
    <errorMessage>Cannot update Total Amount or Account if Status is Completed</errorMessage>
</ValidationRule>