force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BatchNumber__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>TransactionType__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>Division__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>PUC</value>
    </filters>
    <label>All Transactions</label>
</ListView>