force-app/main/default/objects/Transaction__c/listViews/BREG_Upload_Batch_Transactions.listView-meta.xml
<ListView>
    <fullName>BREG_Upload_Batch_Transactions</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>BatchNumberDigits__c</columns>
    <columns>TransactionId__c</columns>
    <columns>WorkitemID__c</columns>
    <columns>Status__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BatchNumber__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>BREG Upload Batch Transactions</label>
    <sharedTo>
        <role>BREG_SEB_Manager</role>
    </sharedTo>
</ListView>