force-app/main/default/objects/Transaction__c/listViews/My_Transactions.listView-meta.xml
<ListView>
    <fullName>My_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>WorkitemID__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>Division__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Transactions</label>
</ListView>